End Of Night Wrapping Up Footer, Realizing That Skill Is All Messed Up And UseEffect Wont Fix It Properly

--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -21,7 +21,7 @@
   // box-model
   min-width: 100vw;
   min-height: 100vh;
-  max-height: 100vh;
+
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url("../../Images/Backgrounds/BrunoPoster.jpg");
   background-size: 100% 100%;
